--- a/css/02styleScreenPosition.css
+++ b/css/02styleScreenPosition.css
@@ -28,6 +28,11 @@ a {
 	text-decoration: none;
 }
 
+img {
+    position: relative;
+    left: 25%;
+    max-width: 50%;
+}
 button {
 	background-color: #00b242;
 	width: 100%;
@@ -57,5 +62,10 @@ p {
 	background-color: #f2f2f2;
 	box-sizing: border-box;
 	font-family: helvetica, sans-serif;
+	font-size: 16px;
+}
+
+.login-text {
+	color: black;
 	font-size: 16px;
 }
