--- a/css/03styleScreen.css
+++ b/css/03styleScreen.css
@@ -7,7 +7,7 @@ body {
 main {
 	position: relative;
 	margin: 0 auto;
-	height: 100vh;
+	height: 95vh;
 }
 
 h1, .copyright {
@@ -18,14 +18,19 @@ h1, .copyright {
 }
 
 h1 {
-	top: 10%;
+    top: 3%;
     text-align: center;
     font-weight: normal;
-    font-size: 2.5em;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 5px;
 }
 
 .copyright {
-	bottom: 10%;
+    bottom: 1%;
+    margin: 0;
+    padding: 0;
+    font-size: 0.78em;
 }
 
 ul {
@@ -41,10 +46,10 @@ hr {
 
 .profile-area {
 	background: #fff;
-	width: 50%;
+	width: 88%;
 	transform: translate(-50%, -50%);
 	position: absolute;
-	top: 50%;
+	top: 48%;
 	left: 50%;
 	max-width: 350px;
 	min-width: 150px;
@@ -67,7 +72,7 @@ hr {
 }
 
 .profile-name {
-    margin-left: 135px;
+    margin-left: 45%;
     min-height: 89px;
     color: #fff;
     margin-top: 12%;
