--- a/css/04styleScreen.css
+++ b/css/04styleScreen.css
@@ -1,17 +1,23 @@
+html {
+	height: 100%;
+}
+
 body {
 	font-family: 'Roboto', sans-serif;
 	padding: 20px;
 	background: #fa9676; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#fa9676, #110d02); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#fa9676, #110d02); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#fa9676, #110d02); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#fa9676, #110d02); /* Standard syntax */
+	background: -webkit-linear-gradient(#fa9676, #110d02); /* For Safari 5.1 to 6.0 */
+	background: -o-linear-gradient(#fa9676, #110d02); /* For Opera 11.1 to 12.0 */
+	background: -moz-linear-gradient(#fa9676, #110d02); /* For Firefox 3.6 to 15 */
+	background: linear-gradient(#fa9676, #110d02); /* Standard syntax */
+	height: 100%;
+	background-attachment: fixed;
 }
 
 main {
 	position: relative;
 	margin: 0 auto;
-	height: 92vh;
+	height: 100%;
 }
 
 ul {
@@ -19,87 +25,87 @@ ul {
 	counter-reset: step;
 	clear: both;
 	padding: 0;
-  max-width: 360px;
-  margin: 0 auto;
+	max-width: 360px;
+	margin: 0 auto;
 }
 
 .progress-bar li {
 	font-size: 12px;
-  	width: 33%;
-  	float: left;
-  	position: relative;
-  	text-align: center;
+	width: 33%;
+	float: left;
+	position: relative;
+	text-align: center;
 }
 
 .progress-bar li.active:after,
 .progress-bar li.active:before {
-  background: #27ae60;
-  color: white;
+	background: #27ae60;
+	color: white;
 }
 
 .progress-bar li:before {
 	content: counter(step);
-  	counter-increment: step;
+	counter-increment: step;
 	width: 25px;
-  	line-height: 25px;
-  	display: block;
-  	font-size: 12px;
-  	color: transparent;
-  	border: 1px solid rgba(236, 236, 236, 0.7);
-  	background: transparent;
-  	border-radius: 19px;
-  	margin: 0 auto 4px;
+	line-height: 25px;
+	display: block;
+	font-size: 12px;
+	color: transparent;
+	border: 1px solid rgba(236, 236, 236, 0.7);
+	background: transparent;
+	border-radius: 19px;
+	margin: 0 auto 4px;
 }
 
 .progress-bar li:after {
-  	content: '';
-    width: 52%;
-    height: 1px;
-    background: rgba(255, 255, 255, 0.51);
-    position: absolute;
-    left: -27%;
-    top: 12px;
-    z-index: -1;
+	content: '';
+	width: 52%;
+	height: 1px;
+	background: rgba(255, 255, 255, 0.51);
+	position: absolute;
+	left: -27%;
+	top: 12px;
+	z-index: -1;
 }
 
 .progress-bar li:first-child:after {
-  content: none;
+	content: none;
 }
 
 .form-area {
 	width: 94%;
-    transform: translate(-50%, -50%);
-    position: absolute;
-    top: 68%;
-    left: 50%;
-    max-width: 500px;
-    min-width: 150px;
+	transform: translate(-50%, -50%);
+	position: absolute;
+	top: 68%;
+	left: 50%;
+	max-width: 500px;
+	min-width: 150px;
 }
 
 .fa-circle {
-    position: absolute;
-    top: 27%;
-    left: 47%;
-    font-size: 10px;
-    color: rgba(255, 255, 255, 0.72);
+	position: absolute;
+	top: 27%;
+	left: 47%;
+	font-size: 10px;
+	color: rgba(255, 255, 255, 0.72);
 }
 
 .fa-align-left {
-  top: 33px;
+	top: 33px;
 }
 
 .fa-envelope-o {
-  top: 112px;
+	top: 112px;
 }
 
 .fa-lock {
-  top: 194px;
+	top: 194px;
 }
 
 .fa-align-left, .fa-envelope-o, .fa-lock {
-  position: absolute;
-  left: 20px;
-  color: rgba(255, 255, 255, 0.59);
+	position: absolute;
+	left: 20px;
+	color: rgba(255, 255, 255, 0.59);
 }
 
 button {
@@ -119,27 +125,27 @@ input::placeholder {
 }
 
 p {
-  color: rgba(202, 202, 202, 0.81);
+	color: rgba(202, 202, 202, 0.81);
 	text-align: center;
 	font-size: 14px;
 }
 
 .create {
-    text-transform: uppercase;
-    color: #fff;
-    padding-top: 121px;
-    font-size: 1.4em;
-    font-weight: bold;
+	text-transform: uppercase;
+	color: #fff;
+	padding-top: 121px;
+	font-size: 1.4em;
+	font-weight: bold;
 }
 
 .form-input {
-    margin: 10px 0;
-    padding: 22px 25px;
-    padding-left: 50px;
-    width: 100%;
-    border: none;
-    background-color: rgba(214, 206, 206, 0.13);
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    border-radius: 50px;
+	margin: 10px 0;
+	padding: 22px 25px;
+	padding-left: 50px;
+	width: 100%;
+	border: none;
+	background-color: rgba(214, 206, 206, 0.13);
+	box-sizing: border-box;
+	font-family: 'Roboto', sans-serif;
+	border-radius: 50px;
 }
