--- a/css/03styleScreen.css
+++ b/css/03styleScreen.css
@@ -1,35 +1,32 @@
 body {
 	background-color: #72a270;
 	font-family: 'Roboto', sans-serif;
-	padding: 20px;
+    margin: 0;
+    height: 100%;
 }
 
 main {
 	position: relative;
-	margin: 0 auto;
-	height: 95vh;
+    margin: 0 auto;
 }
 
 h1, .copyright {
 	color: #fff;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	left: 50%;
 }
 
 h1 {
-    top: 3%;
     text-align: center;
     font-weight: normal;
     font-size: 1.5em;
     margin: 0;
     padding: 5px;
+    padding-top: 10px;
 }
 
 .copyright {
     bottom: 1%;
     margin: 0;
-    padding: 0;
+    padding: 0 0 9px;
     font-size: 0.78em;
 }
 
@@ -47,12 +44,9 @@ hr {
 .profile-area {
 	background: #fff;
 	width: 88%;
-	transform: translate(-50%, -50%);
-	position: absolute;
-	top: 48%;
-	left: 50%;
-	max-width: 350px;
-	min-width: 150px;
+    min-width: 150px;
+    margin: 8% auto;
+    position: relative;
 }
 
 .profile {
@@ -103,9 +97,10 @@ a {
 
 img {
     position: absolute;
-    max-width: 31%;
+    max-width: 33%;
     border-radius: 50%;
-    padding: 5px;
+    padding: 0;
+    max-height: 25%;
 }
 
 .number {
