--- a/css/01styleFirstScreenPosition.css
+++ b/css/01styleFirstScreenPosition.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #73c259;
+	background-color: #25b6aa;
 	font-family: helvetica, sans-serif;
 	padding: 20px;
 }
@@ -58,4 +58,19 @@ p {
 	box-sizing: border-box;
 	font-family: helvetica, sans-serif;
 	font-size: 16px;
+}
+
+.path {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: dash 5s linear alternate infinite;
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
 }
