--- a/css/06styleScreen.css
+++ b/css/06styleScreen.css
@@ -13,6 +13,12 @@ body {
 }
 
 main {
+  background: url('../images/bkg6.jpg') no-repeat center center fixed;
+  height: 100%;
 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
